--- a/src/cr/ac/una/ingenieria/appMVC/Vista/PantallaPrincipal.form
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/PantallaPrincipal.form
@@ -415,13 +415,17 @@
                   <EmptySpace min="573" pref="573" max="-2" attributes="0"/>
                   <Component id="LbTituloCuadro" min="-2" pref="220" max="-2" attributes="0"/>
               </Group>
-              <Group type="102" attributes="0">
-                  <EmptySpace min="393" pref="393" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" min="-2" pref="600" max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="520" max="-2" attributes="0"/>
-                  <Component id="jbtn_Gen_Orden_Compra" min="-2" pref="330" max="-2" attributes="0"/>
+              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="520" max="-2" attributes="0"/>
+                      <Component id="jbtn_Gen_Orden_Compra" min="-2" pref="330" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="Bt_Refrescar" min="-2" pref="57" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="393" pref="393" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="600" max="-2" attributes="0"/>
+                  </Group>
               </Group>
           </Group>
         </DimensionLayout>
@@ -432,9 +436,12 @@
                   <Component id="LbTituloCuadro" min="-2" pref="20" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="221" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="jbtn_Gen_Orden_Compra" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="Bt_Refrescar" max="32767" attributes="0"/>
+                      <Component id="jbtn_Gen_Orden_Compra" max="32767" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -517,6 +524,16 @@
             </Property>
             <Property name="text" type="java.lang.String" value="GENERAR ORDEN DE COMPRA"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JButton" name="Bt_Refrescar">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/cr/ac/una/ingenieria/appMVC/Vista/Imagen/Cargar01.png"/>
+            </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
